--- a/package.json
+++ b/package.json
@@ -65,13 +65,15 @@
     "react-hook-form": "^7.51.2",
     "react-resizable-panels": "^2.0.16",
     "react-textarea-autosize": "^8.5.3",
+    "reactflow": "^11.10.4",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
